# DreamFoundation

./: CMakeLists.txt  LICENSE  README.md
include/Dream/: Dream.h  KeyCodes.h  Window.h  _callbackSig.h
src/Dream/: .gitignore  Logger.c  Logger.h  Platform.h
src/DreamWindow/: DreamInternalAPI.c  DreamInternalAPI.h  DreamWindow.h  Platform.h
src/DreamWindow/wayland/: WaylandWindow.h
src/DreamWindow/win32/: Win32Window.h
src/DreamWindow/x11/: X11PlatformState.h  X11Window.h
